manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mortiz-app-service
  namespace: dev
spec:
  selector:
    app: wil-playground
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  type: ClusterIP
