manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: will-playground-ingress
  namespace: dev
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: / 
        pathType: Exact
        backend:
          service:
            name: will-playground-app-service
            port:
              number: 8080
